# obstore

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  DEVELOP.md  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  rust-release-pyo3-bytes.yml  (+3 more)
0.1.0-beta.1/: 404.html  sitemap.xml
docs/: alternatives.md  authentication.md  cookbook.md  fsspec.md  getting-started.md  method-vs-functional-api.md  obspec.md
examples/: planetary_computer_geoparquet.py
examples/zarr/: README.md  main.py  pyproject.toml
latest/: 404.html  index.html  objects.inv  sitemap.xml
object-store-py/: Cargo.toml  pyproject.toml
object-store-rs/: Cargo.toml
obspec/: README.md  pyproject.toml
obspec/obspec/: __init__.py  _head.py  _rename.py
obspec/src/obspec/: _attributes.py  _copy.py  _delete.py  _get.py  _head.py  _list.py  _put.py  _rename.py
obstore/: Cargo.toml  pyproject.toml
obstore/python/obstore/: __init__.py  _attributes.pyi  _buffered.pyi  _buffered_types.py  _bytes.py  _delete.pyi  _get.pyi  _get_types.py  _head.pyi  _list.pyi  _list_types.py  _obstore.pyi  _put.pyi  _put_types.py  _sign.pyi  _sign_types.py  _tracing.pyi  exceptions.py  fsspec.py  store.py
obstore/python/obstore/_store/: __init__.pyi  _aws.pyi  _azure.pyi  _client.pyi  _gcs.pyi  _http.pyi  _path.pyi
obstore/python/obstore/auth/: _http.py  azure.py  boto3.py  earthdata.py  google.py  planetary_computer.py
obstore/python/obstore/auth/planetary_computer/: __init__.py  _credential_provider.py  _settings.py
obstore/python/obstore/client/: aiohttp.py
obstore/python/obstore/exceptions/: __init__.pyi
obstore/python/obstore/google/: auth.py
obstore/python/obstore/store/: __init__.pyi  _aws.pyi  _azure.pyi  _gcs.pyi
obstore/src/: attributes.rs  buffered.rs  copy.rs  delete.rs  error.rs  get.rs  head.rs  lib.rs  list.rs  path.rs  put.rs  rename.rs  signer.rs  tags.rs  tracing.rs
obstore/src/metrics/: iox_time.rs  mod.rs  multipart_upload_metrics.rs  store.rs
obstore/src/metrics/metric/: counter.rs  duration.rs  gauge.rs  histogram.rs  metric.rs  mod.rs
obstore/src/tests/: credentials.rs  mod.rs
pyo3-bytes/: CHANGELOG.md  Cargo.toml  DEVELOP.md  README.md  bytes.py  bytes.pyi
pyo3-bytes/src/: bytes.rs
pyo3-object_store/: CHANGELOG.md  Cargo.toml  DEVELOP.md  README.md
pyo3-object_store/src/: api.rs  aws.rs  azure.rs  base.rs  client.rs  config.rs  credentials.rs  error.rs  gcp.rs  http.rs  instrumented_object_store.rs  lib.rs  local.rs  memory.rs  path.rs  prefix.rs  retry.rs  runtime.rs  simple.rs  store.rs  url.rs
pyo3-object_store/src/aws/: credentials.rs  mod.rs  store.rs
pyo3-object_store/src/azure/: credentials.rs  mod.rs  store.rs
pyo3-object_store/src/client/: connector.rs  mod.rs  options.rs
pyo3-object_store/src/gcp/: credentials.rs  mod.rs  store.rs
pyo3-object_store/src/middleware/: metrics.rs
pyo3-object_store/type-hints/: __init__.pyi  _aws.pyi  _client.pyi
tests/: conftest.py  test_attributes.py  test_buffered.py  test_bytes.py  test_copy.py  test_delete.py  test_fsspec.py  test_get.py  test_head.py  test_importable_type_hints.py  test_list.py  test_obspec.py  test_path.py  test_put.py  test_rename.py  test_tracing.py
v0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.10.0/: 404.html  index.html  sitemap.xml
v0.10.1/: objects.inv  sitemap.xml
v0.11.0/: objects.inv  sitemap.xml
v0.2.0/: index.html
v0.2.0-beta.2/: index.html
v0.3.0/: index.html
v0.3.0-beta.1/: 404.html  index.html
v0.3.0-beta.10/: 404.html  index.html  objects.inv  sitemap.xml
v0.3.0-beta.11/: 404.html  index.html  objects.inv  sitemap.xml
v0.3.0-beta.2/: sitemap.xml
v0.3.0-beta.4/: sitemap.xml
v0.3.0-beta.5/: sitemap.xml
v0.3.0-beta.6/: objects.inv  sitemap.xml
v0.3.0-beta.7/: index.html  sitemap.xml
v0.3.0-beta.8/: sitemap.xml
v0.3.0-beta.9/: 404.html  index.html  objects.inv  sitemap.xml
v0.4.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.4.0-beta.1/: 404.html  index.html  objects.inv  sitemap.xml
v0.4.0-beta.2/: 404.html  index.html  objects.inv
v0.4.0-beta.4/: objects.inv  sitemap.xml
v0.5.0/: objects.inv
v0.5.0-beta.1/: 404.html  index.html  objects.inv  sitemap.xml
v0.5.0-rc.1/: sitemap.xml
v0.5.1/: 404.html  index.html
v0.6.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.7.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.7.1/: 404.html  index.html  sitemap.xml
v0.7.2/: sitemap.xml
v0.7.3/: sitemap.xml
v0.8.0/: sitemap.xml
v0.8.1/: index.html  sitemap.xml
v0.8.2/: sitemap.xml
v0.9.0/: objects.inv  sitemap.xml
v0.9.1/: 404.html  index.html  sitemap.xml
v0.9.2/: 404.html  index.html  sitemap.xml
v0.9.3/: sitemap.xml
v0.9.4/: sitemap.xml
v0.9.5/: objects.inv  sitemap.xml
(+824 files in other folders)
