[workspace]
members = ["obstore"]
# Note: pyo3-object_store is _not_ a member of this workspace because we need to
# patch the object_store version for Python to export a list stream. This list
# stream is implemented in https://github.com/apache/arrow-rs/pull/6619 and will
# be included in object_store's next major release.
#
# But pyo3-object_store gets published to crates.io, which can't have git
# dependencies.
exclude = ["pyo3-object_store", "pyo3-bytes"]
resolver = "2"

[workspace.package]
authors = ["Kyle Barron <kyle@developmentseed.org>"]
edition = "2021"
homepage = "https://developmentseed.org/obstore"
repository = "https://github.com/developmentseed/obstore"
license = "MIT OR Apache-2.0"
keywords = ["python"]
categories = []
rust-version = "1.75"

[workspace.dependencies]
bytes = "1.10.1"
chrono = "0.4.44"
futures = "0.3.31"
http = "1.4"
indexmap = "2"
object_store = { version = "0.14.0", features = [
    "aws",
    "azure",
    "gcp",
    "http",
] }
pyo3 = { version = "0.29", features = ["macros", "indexmap"] }
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"] }
pyo3-file = { git = "https://github.com/kylebarron/pyo3-file", rev = "e88695f375ea3db95d96efc53707f4e8eb1def00" }
thiserror = "2"
tokio = "1.50"
url = "2"

[profile.release]
lto = true
codegen-units = 1
