[package]
name = "pyo3-object_store"
version = "0.1.0-beta.1"
authors = ["Kyle Barron <kyle@developmentseed.org>"]
edition = "2021"
description = "object_store integration for pyo3."
readme = "README.md"
repository = "https://github.com/developmentseed/obstore"
license = "MIT OR Apache-2.0"
keywords = []
categories = []
rust-version = "1.75"
# Include the Python type hints as part of the cargo distribution
include = ["src", "type-hints", "README.md", "LICENSE"]

[dependencies]
futures = "0.3"
object_store = { version = "0.11", features = ["aws", "azure", "gcp", "http"] }
pyo3 = { version = "0.23", features = ["chrono", "indexmap"] }
pyo3-async-runtimes = { git = "https://github.com/PyO3/pyo3-async-runtimes", branch = "release-0.23", version = "0.23", features = [
    "tokio-runtime",
] }
# pyo3-async-runtimes = { version = "0.22", features = ["tokio-runtime"] }
thiserror = "1"
url = "2"

[lib]
crate-type = ["rlib"]
